--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<h2>FoodZone</h2>
 				<p>foodzone lets you order food <br /> right from your desk/table</p>
 				<ul class="actions">
-					<li><a href="page1.php" class="button special big">Get Started</a></li>
+					<li><a href="page1.html" class="button special big">Get Started</a></li>
 				</ul>
 			</section>
 
