--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" href="icon.png">
+		<link rel="icon" href="1.png">
 	</head>
 	<body class="landing">
 
@@ -21,7 +21,7 @@
 				<h2>FoodZone</h2>
 				<p>foodzone lets you order food <br /> right from your desk/table</p>
 				<ul class="actions">
-					<li><a href="page1.html" class="button special big">Get Started</a></li>
+					<li><a href="page1.php" class="button special big">Get Started</a></li>
 				</ul>
 			</section>
 
