--- a/page1.html
+++ b/page1.html
@@ -56,17 +56,17 @@
 </tr>
 
 <tr>
-  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">enter name</td>
+  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">Enter name</td>
 <td><input type="text"  name="name" required focus></br></td>
 </tr>
 
 <tr>
-  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">enter number</td>
+  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">Enter number</td>
 <td><input type="text" name="number" required></br></td>
 </tr>
 
 <tr>
-  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">enter email</td>
+  		<td style="text-shadow: 0 0 3px rgb(16, 17, 17),0 0 4px rgb(216, 226, 224);font-family: verdana;font-size:0.8cm ">Enter email</td>
 <td><input type="email" name="email" required></br></td>
 </tr>
 
